--- a/src/home.css
+++ b/src/home.css
@@ -145,7 +145,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-image: url('/src/assets/style/avatar.png');
+    background-image: url('images/avatar.png');
     background-size: cover;
     border-radius: 50%;
     z-index: 1;
