fix(bulecss): button color

--- a/src/dashboard.css
+++ b/src/dashboard.css
@@ -19171,6 +19171,6 @@ a.no-hover-underline:active, a.no-hover-underline:hover {
 .hk-button--primary {
     background-clip: border-box!important;
     background-origin: border-box!important;
-    background: #79589f;
+    background: #409eff;
     color: #fff;
 }
