--- a/src/bulecss.css
+++ b/src/bulecss.css
@@ -1017,7 +1017,7 @@ body,html
 
 .hk-button--secondary:not(:disabled):hover,.hk-button--tertiary:not(:disabled):hover,.hk-button-sm--secondary:not(:disabled):hover,.hk-button-sm--tertiary:not(:disabled):hover
 {
-	background: rgba(121,88,159,.1)
+	background: rgba(64,158,255,.1)
 }
 
 .hk-button--danger:not(:disabled):hover,.hk-button-sm--danger:not(:disabled):hover
@@ -1226,7 +1226,7 @@ body,html
 	background: #f7f3fb;
 	outline: none;
 	border-color: #409EFF;
-	box-shadow: 0 0 0 2px rgba(157,112,208,.4)
+	box-shadow: 0 0 0 2px rgba(64,158,255,.4)
 }
 
 .hk-dropdown-item--danger:active,.hk-dropdown-item--danger:focus,.hk-dropdown-item--danger:hover
@@ -1273,7 +1273,7 @@ body,html
 	font-size: 12px;
 	color: #409EFF;
 	font-weight: 600;
-	border: 1px solid #a997bf;
+	border: 1px solid #c6e2ff;
 	border-radius: 4px;
 	display: -ms-flexbox;
 	display: flex;
@@ -1338,7 +1338,7 @@ body,html
 {
 	outline: none;
 	border-color: #409EFF;
-	box-shadow: 0 0 0 2px rgba(157,112,208,.4)
+	box-shadow: 0 0 0 2px rgba(64,158,255,.4)
 }
 
 .hk-input--read-only
@@ -1451,7 +1451,7 @@ body,html
 {
 	outline: none;
 	border-color: #409EFF;
-	box-shadow: 0 0 0 2px rgba(157,112,208,.4)
+	box-shadow: 0 0 0 2px rgba(64,158,255,.4)
 }
 
 .hk-search-input--read-only
@@ -1551,7 +1551,7 @@ body,html
 {
 	outline: none;
 	border-color: #409EFF;
-	box-shadow: 0 0 0 2px rgba(157,112,208,.4)
+	box-shadow: 0 0 0 2px rgba(64,158,255,.4)
 }
 
 .hk-select--disabled
@@ -1586,7 +1586,7 @@ body,html
 {
 	outline: none;
 	border-color: #409EFF;
-	box-shadow: 0 0 0 2px rgba(157,112,208,.4)
+	box-shadow: 0 0 0 2px rgba(64,158,255,.4)
 }
 
 .hk-focus-ring--blue:focus
